--- a/ARTZ/templates/index.html
+++ b/ARTZ/templates/index.html
@@ -106,8 +106,8 @@
                      <div class="row">
                         <div class="col-md-6">
 
-                           <h1 class="banner_taital">Health <br><span style="color: #151515;">Care</span></h1>
-                           <p class="banner_text">There are many variations of passages of Lorem Ipsum</p>
+                           <h1 class="banner_taital">"Easy to Use" <br><span style="color: #151515;">"Efficient"</span></h1>
+                           <p class="banner_text">"Artz: Where convenience meets quality healthcare"</p>
                            <div class="btn_main">
                               <div class="more_bt"><a href="#">Contact Now</a></div>
                              <div class="contact_bt"><a href="#">Get A Quote</a></div>
@@ -126,8 +126,8 @@
                   <div class="container">
                      <div class="row">
                         <div class="col-md-6">
-                           <h1 class="banner_taital">Health <br><span style="color: #151515;">Care</span></h1>
-                           <p class="banner_text">There are many variations of passages of Lorem Ipsum</p>
+                           <h1 class="banner_taital">Revolutionalizing <br><span style="color: #151515;">HealthCare</span></h1>
+                           <p class="banner_text">"Artz: The smartest choice for scheduling appointments"</p>
                            <div class="btn_main">
                               <div class="more_bt"><a href="#">Contact Now</a></div>
                              <div class="contact_bt"><a href="#">Get A Quote</a></div>
@@ -153,8 +153,8 @@
    <!-- health section start -->
    <div class="health_section layout_padding">
       <div class="container">
-         <h1 class="health_taital">Best Of Health care for you</h1>
-         <p class="health_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis</p>
+         <h1 class="health_taital">Health Care at Your Fingertips</h1>
+         <p class="health_text">Book an Appointment with any of our Medical Personnels with ease, we made it easy beacause we care!</p>
          <div class="health_section layout_padding">
             <div class="row">
                <div class="col-sm-7">
@@ -188,8 +188,10 @@
       <div class="container">
          <div class="knowledge_main">
             <div class="left_main">
-               <h1 class="knowledge_taital">Knowledge of center</h1>
-               <p class="knowledge_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+               <h1 class="knowledge_taital">Book smarter, not harder</h1>
+               <p class="knowledge_text">At Artz, we are committed to providing you with a hassle-free and convenient experience. We strive to make healthcare accessible to everyone, and that's why we offer our services at an affordable cost.
+
+                  In summary, Artz is the ultimate solution for all your medical appointment needs. Choose us for a seamless, efficient and user-friendly experience, and get the care you deserve.</p>
             </div>
             <div class="right_main">
                <div class="play_icon"><a href="#"><img src="{% static 'images/play-icon.png' %}"></a></div>
@@ -201,8 +203,8 @@
    <!-- news section start -->
    <div class="news_section layout_padding">
       <div class="container">
-         <h1 class="health_taital">Why choose 24hr home care</h1>
-         <p class="health_text">labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+         <h1 class="health_taital">Why choose ARTZ?</h1>
+         <p class="health_text">Efficient, convenient, and user-friendly: the ultimate solution for booking medical appointments!</p>
          <div class="news_section_2 layout_padding">
             <div class="row">
                <div class="col-lg-4 col-sm-6">
@@ -220,7 +222,7 @@
                <div class="col-lg-4 col-sm-6">
                   <div class="box_main">
                      <div class="icon_1"><img src="{% static 'images/icon-4.png' %}"></div>
-                     <h4 class="daily_text_1">Balanced care</h4>
+                     <h4 class="daily_text_1">Special care</h4>
                   </div>
                </div>
             </div>
@@ -238,15 +240,15 @@
                <div class="col-md-6">
                   <div class="icon_main">
                      <div class="icon_7"><img src="{% static 'images/icon-7.png' %}"></div>
-                     <h4 class="diabetes_text">Diabetes and obesity Counselling </h4>
+                     <h4 class="diabetes_text">Family Counselling </h4>
                   </div>
                   <div class="icon_main">
                      <div class="icon_7"><img src="{% static 'images/icon-5.png' %}"></div>
-                     <h4 class="diabetes_text">Obstetrics and Gynsecology</h4>
+                     <h4 class="diabetes_text">Obstetrics and Gynaecology</h4>
                   </div>
                   <div class="icon_main">
                      <div class="icon_7"><img src="{% static 'images/icon-6.png' %}"></div>
-                     <h4 class="diabetes_text">Surgical and medical Oncology</h4>
+                     <h4 class="diabetes_text">Cardiology</h4>
                   </div>
                </div>
                <div class="col-md-6">
@@ -268,14 +270,14 @@
             <div class="carousel-item active">
                <div class="container">
                   <h1 class="client_taital">What People Say</h1>
-                  <p class="client_text">It is a long established fact that a reader will be distracted </p>
+                  <p class="client_text">"Artz has exceeded my expectations. The platform is easy to navigate and the selection of doctors is impressive. I am so glad I found this service." </p>
                   <div class="client_section_2">
                      <div class="client_left">
                         <div><img src="{% static 'images/client-img.png' %}" class="client_img"></div>
                      </div>
                      <div class="client_right">
-                        <h3 class="distracted_text">Distracted by</h3>
-                        <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                        <h3 class="distracted_text">Appointments made Easy</h3>
+                        <p class="lorem_text">I never knew scheduling medical appointments could be so easy. Artz has made it possible for me to take control of my healthcare.</p>
                         <div class="quote_icon"><img src="{% static 'images/quote-icon.png' %}"></div>
                      </div>
                   </div>
@@ -284,14 +286,14 @@
             <div class="carousel-item">
                <div class="container">
                   <h1 class="client_taital">What People Say</h1>
-                  <p class="client_text">It is a long established fact that a reader will be distracted </p>
+                  <p class="client_text">I appreciate the transparency and ease of use of the Artz platform. Scheduling appointments has never been easier. </p>
                   <div class="client_section_2">
                      <div class="client_left">
                         <div><img src="{% static 'images/client-img.png' %}" class="client_img"></div>
                      </div>
                      <div class="client_right">
-                        <h3 class="distracted_text">Distracted by</h3>
-                        <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                        <h3 class="distracted_text">No Wait Time</h3>
+                        <p class="lorem_text">Artz has made my life so much easier. I can now book appointments on my own time and don't have to worry about long wait times.</p>
                         <div class="quote_icon"><img src="{% static 'images/quote-icon.png' %}"></div>
                      </div>
                   </div>
@@ -300,14 +302,14 @@
             <div class="carousel-item">
                <div class="container">
                   <h1 class="client_taital">What People Say</h1>
-                  <p class="client_text">It is a long established fact that a reader will be distracted </p>
+                  <p class="client_text">Artz has changed the way I schedule medical appointments. No more waiting on hold or fighting for a spot. Highly recommend!</p>
                   <div class="client_section_2">
                      <div class="client_left">
                         <div><img src="{% static 'images/client-img.png' %}" class="client_img"></div>
                      </div>
                      <div class="client_right">
-                        <h3 class="distracted_text">Distracted by</h3>
-                        <p class="lorem_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters</p>
+                        <h3 class="distracted_text">Reliable and convenient</h3>
+                        <p class="lorem_text">I highly recommend Artz to anyone in need of a reliable and convenient medical appointment booking system.</p>
                         <div class="quote_icon"><img src="{% static 'images/quote-icon.png' %}"></div>
                      </div>
                   </div>
@@ -336,11 +338,11 @@
             </div>
             <div class="col-lg-3 col-sm-6">
                <h1 class="adderss_text">Doctors</h1>
-               <div class="hiphop_text_1">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</div>
+               <div class="hiphop_text_1"> </div>
             </div>
             <div class="col-lg-3 col-sm-6">
                <h1 class="adderss_text">Useful Links</h1>
-               <div class="Useful_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered ,</div>
+               <div class="Useful_text"></div>
             </div>
             <div class="col-lg-3 col-sm-6">
                <h1 class="adderss_text">Newsletter</h1>
@@ -362,7 +364,7 @@
    <!-- copyright section start -->
    <div class="copyright_section">
       <div class="container">
-         <p class="copyright_text">2023 All Rights Reserved. Design by <a href="https://html.design"></a>Free html Templates</a></p>
+         <p class="copyright_text">2023 All Rights Reserved. Design by <a href=""></a>Farida Momoh</a></p>
       </div>
    </div>
    <!-- copyright section end -->
