--- a/ARTZ/templates/login.html
+++ b/ARTZ/templates/login.html
@@ -75,15 +75,15 @@
                   <div class="col-md-6">
                      <div class="icon_main">
                         <div class="icon_7"><img src="{% static 'images/icon-7.png' %}"></div>
-                        <h4 class="diabetes_text">Diabetes and obesity Counselling </h4>
+                        <h4 class="diabetes_text">Paediatrics </h4>
                      </div>
                      <div class="icon_main">
                         <div class="icon_7"><img src="{% static 'images/icon-5.png' %}"></div>
-                        <h4 class="diabetes_text">Obstetrics and Gynsecology</h4>
+                        <h4 class="diabetes_text">Orthopedics</h4>
                      </div>
                      <div class="icon_main">
                         <div class="icon_7"><img src="{% static 'images/icon-6.png' %}"></div>
-                        <h4 class="diabetes_text">Surgical and medical Oncology</h4>
+                        <h4 class="diabetes_text">Oncology</h4>
                      </div>
                   </div>
                   <div class="col-md-6">
@@ -124,21 +124,21 @@
                <div class="col-lg-3 col-sm-6">
                   <div class="footer_logo"><a href="index.html"><img src="{% static 'images/footer-logo.png' %}"></a></div>
                   <h1 class="adderss_text">Contact Us</h1>
-                  <div class="map_icon"><img src="{% static 'images/map-icon.png' %}"><span class="paddlin_left_0">Page when looking at its</span></div>
-                  <div class="map_icon"><img src="{% static 'images/call-icon.png' %}"><span class="paddlin_left_0">+7586656566</span></div>
-                  <div class="map_icon"><img src="{% static 'images/mail-icon.png' %}"><span class="paddlin_left_0">volim@gmail.com</span></div>
+                  <div class="map_icon"><img src="{% static 'images/map-icon.png' %}"><span class="paddlin_left_0">Lagos, Nigeria</span></div>
+                  <div class="map_icon"><img src="{% static 'images/call-icon.png' %}"><span class="paddlin_left_0">+2348029305929</span></div>
+                  <div class="map_icon"><img src="{% static 'images/mail-icon.png' %}"><span class="paddlin_left_0">farimomoh@gmail.com</span></div>
                </div>
                <div class="col-lg-3 col-sm-6">
                   <h1 class="adderss_text">Doctors</h1>
-                  <div class="hiphop_text_1">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</div>
+                  <div class="hiphop_text_1"></div>
                </div>
                <div class="col-lg-3 col-sm-6">
                   <h1 class="adderss_text">Useful Links</h1>
-                  <div class="Useful_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered ,</div>
+                  <div class="Useful_text"></div>
                </div>
                <div class="col-lg-3 col-sm-6">
                   <h1 class="adderss_text">Newsletter</h1>
-                  <input type="text" class="Enter_text" placeholder="Enter your Emil" name="Enter your Emil">
+                  <input type="text" class="Enter_text" placeholder="Enter your Email" name="Enter your Email">
                   <div class="subscribe_bt"><a href="#">Subscribe</a></div>
                   <div class="social_icon">
                      <ul>
@@ -156,7 +156,7 @@
       <!-- copyright section start -->
       <div class="copyright_section">
          <div class="container">
-            <p class="copyright_text">2019 All Rights Reserved. Design by <a href="https://html.design">Free html  Templates</a></p>
+            <p class="copyright_text">2023 All Rights Reserved. Design by <a href="">Farida Momoh</a></p>
          </div>
       </div>
       <!-- copyright section end -->
