--- a/ARTZ/templates/userDashboard.html
+++ b/ARTZ/templates/userDashboard.html
@@ -58,13 +58,13 @@
                   <a class="nav-link" href="{% url 'index' %}">Home</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link" href="news.html">News</a>
+                  <a class="nav-link" href="#">News</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="{% url 'booking' %}">Appointments</a>
                </li>
                <li class="nav-item active">
-                  <a class="nav-link" href="contact.html">Profile</a>
+                  <a class="nav-link" href="">Profile</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="#"><img src="{% static 'images/search-icon.png' %}"></a>
@@ -104,6 +104,7 @@
 
    -->
 
+<h3 class="banner_taital">Dash<span style="color: #151515;">board</span></h3>
 
    {% if user.is_authenticated %}
    <div class="shadow p-4 mb-5 bg-body bg-body rounded text-black  m-5 ">
@@ -117,7 +118,7 @@
 
    {% if appointments.count > 0 %}
    <div class="mt-5 ">
-      <h1 class=" ms-5">Appointments:</h1>
+      <div> <h1 class=" ms-5">Appointments:</h1></div>
       <div class="shadow p-4 mb-3 bg-body bg-body rounded text-black  m-5">
          {% for appointment in appointments %}
          <div class="list-group fs-4 border p-3 mb-3">
@@ -140,68 +141,64 @@
             </div>
 
             {% endif %}
-
-
-            <!-- contact section end -->
-            <!-- footer section start -->
-            <div class="footer_section layout_padding">
-               <div class="container">
-                  <div class="row">
-                     <div class="col-lg-3 col-sm-6">
-                        <div class="footer_logo"><a href="index.html"><img
-                                 src="{% static 'images/footer-logo.png' %}"></a></div>
-                        <h1 class="adderss_text">Contact Us</h1>
-                        <div class="map_icon"><img src="{% static 'images/map-icon.png' %}"><span
-                              class="paddlin_left_0">Page when looking at its</span></div>
-                        <div class="map_icon"><img src="{% static 'images/call-icon.png' %}"><span
-                              class="paddlin_left_0">+7586656566</span></div>
-                        <div class="map_icon"><img src="{% static 'images/mail-icon.png' %}"><span
-                              class="paddlin_left_0">volim@gmail.com</span></div>
-                     </div>
-                     <div class="col-lg-3 col-sm-6">
-                        <h1 class="adderss_text">Doctors</h1>
-                        <div class="hiphop_text_1">There are many variations of passages of Lorem Ipsum available, but
-                           the majority have suffered alteration in some form, by injected humour,</div>
-                     </div>
-                     <div class="col-lg-3 col-sm-6">
-                        <h1 class="adderss_text">Useful Links</h1>
-                        <div class="Useful_text">There are many variations of passages of Lorem Ipsum available, but the
-                           majority have suffered ,</div>
-                     </div>
-                     <div class="col-lg-3 col-sm-6">
-                        <h1 class="adderss_text">Newsletter</h1>
-                        <input type="text" class="Enter_text" placeholder="Enter your Emil" name="Enter your Emil">
-                        <div class="subscribe_bt"><a href="#">Subscribe</a></div>
-                        <div class="social_icon">
-                           <ul>
-                              <li><a href="#"><img src="{% static 'images/fb-icon.png' %}"></a></li>
-                              <li><a href="#"><img src="{% static 'images/twitter-icon.png' %}"></a></li>
-                              <li><a href="#"><img src="{% static 'images/linkedin-icon.png' %}"></a></li>
-                              <li><a href="#"><img src="{% static 'images/instagram-icon.png' %}"></a></li>
-                           </ul>
-                        </div>
-                     </div>
-                  </div>
+   </div>
+   <!-- footer section start -->
+   <div class="footer_section layout_padding">
+      <div class="container">
+         <div class="row">
+            <div class="col-lg-3 col-sm-6">
+               <div class="footer_logo"><a href="{% static index.html %}"><img src="{% static 'images/footer-logo.png' %}"></a></div>
+               <h1 class="adderss_text">Contact Us</h1>
+               <div class="map_icon"><img src="{% static 'images/map-icon.png' %}"><span class="paddlin_left_0">Lagos, Nigeria.</span></div>
+               <div class="map_icon"><img src="{% static 'images/call-icon.png' %}"><span class="paddlin_left_0">+2348029305929</span></div>
+               <div class="map_icon"><img src="{% static 'images/mail-icon.png' %}"><span class="paddlin_left_0">farimomoh@gmail.com</span></div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+               <h1 class="adderss_text">Doctors</h1>
+               <div class="hiphop_text_1"> </div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+               <h1 class="adderss_text">Useful Links</h1>
+               <div class="Useful_text"></div>
+            </div>
+            <div class="col-lg-3 col-sm-6">
+               <h1 class="adderss_text">Newsletter</h1>
+               <input type="text" class="Enter_text" placeholder="Enter your Email" name="Enter your Email">
+               <div class="subscribe_bt"><a href="#">Subscribe</a></div>
+            <div class="social_icon">
+                  <ul>
+                     <li><a href="#"><img src="{% static 'images/fb-icon.png' %}"></a></li>
+                     <li><a href="#"><img src="{% static 'images/twitter-icon.png' %}"></a></li>
+                     <li><a href="#"><img src="{% static 'images/linkedin-icon.png' %}"></a></li>
+                     <li><a href="#"><img src="{% static 'images/instagram-icon.png' %}"></a></li>
+                  </ul>
                </div>
             </div>
-            <!-- footer section end -->
-            <!-- copyright section start -->
-            <div class="copyright_section">
-               <div class="container">
-                  <p class="copyright_text">2023 All Rights Reserved. Design by <a href="https://html.design">Free html
-                        Templates</a></p>
-               </div>
-            </div>
-            <!-- copyright section end -->
-            <!-- Javascript files-->
-            <script src="{% static 'js/jquery.min.js' %}"></script>
-            <script src="{% static 'js/popper.min.js' %}"></script>
-            <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-            <script src="{% static 'js/jquery-3.0.0.min.js' %}"></script>
-            <script src="{% static 'js/plugin.js' %}"></script>
-            <!-- sidebar -->
-            <script src="{% static 'js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
-            <script src="{% static 'js/custom.js' %}"></script>
-            <!-- javascript -->
-            <script src="{% static 'js/owl.carousel.js' %}"></script>
-            <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+         </div>
+      </div>
+   </div>
+
+   </div>
+   <!-- footer section end -->
+   <!-- copyright section start -->
+   <div class="copyright_section">
+      <div class="container">
+         <p class="copyright_text">2023 All Rights Reserved. Design by <a href=""></a>Farida Momoh</a></p>
+      </div>
+   </div>
+   <!-- copyright section end -->
+   <!-- Javascript files-->
+   <script src="{% static 'js/jquery.min.js' %}"></script>
+   <script src="{% static 'js/popper.min.js' %}"></script>
+   <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+   <script src="{% static 'js/jquery-3.0.0.min.js' %}"></script>
+   <script src="{% static 'js/plugin.js' %}"></script>
+   <!-- sidebar -->
+   <script src="{% static 'js/jquery.mCustomScrollbar.concat.min.js' %}"></script>
+   <script src="{% static 'js/custom.js' %}"></script>
+   <!-- javascript -->
+   <script src="{% static 'js/owl.carousel.js' %}"></script>
+   <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+</body>
+
+</html>
