--- a/ARTZ/templates/index.html
+++ b/ARTZ/templates/index.html
@@ -76,8 +76,8 @@
                      <div class="row">
                         <div class="col-md-6">
                            {% if user.is_authenticated %}
-                           <h1 class="banner_taital">Welcome <br><span style="color: #151515;">{{user.username}}</span></h1>
-                           <p class="banner_text">"Your Digital Health Assistant "
+                           <h1 class="banner_taital">Welcome, <br><span style="color: #151515;">{{user.first_name}}!</span></h1>
+                           <p class="banner_text">"What would you like today? "
                            </p>
                            <div class="btn_main">
                               <div class="more_bt"><a href="#">Dashboard</a></div>
@@ -129,8 +129,8 @@
                            <h1 class="banner_taital">Revolutionalizing <br><span style="color: #151515;">HealthCare</span></h1>
                            <p class="banner_text">"Artz: The smartest choice for scheduling appointments"</p>
                            <div class="btn_main">
-                              <div class="more_bt"><a href="#">Contact Now</a></div>
-                             <div class="contact_bt"><a href="#">Get A Quote</a></div>
+                              <div class="more_bt"><a href="#">Book Now</a></div>
+                             <div class="contact_bt"><a href="#">View Medicals</a></div>
                           </div>
                         </div>
                         <div class="col-md-6">
