Last Update- Added Medical Report Templates

--- a/ARTZ/templates/register.html
+++ b/ARTZ/templates/register.html
@@ -47,7 +47,7 @@
                      <a class="nav-link" href="health.html">Health</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="medicine.html">Medicine</a>
+                     <a class="nav-link" href="">Medicals</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="news.html">News</a>
