--- a/ARTZ/templates/bookingSubmit.html
+++ b/ARTZ/templates/bookingSubmit.html
@@ -56,7 +56,7 @@
                      <a class="nav-link" href="news.html">News</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="{% url 'booking' %}">Appointments</a>
+                     <a class="nav-link" href="#">Appointments</a>
                   </li>
                   <li class="nav-item active">
                      <a class="nav-link" href="contact.html">Profile</a>
