--- a/ARTZ/templates/index.html
+++ b/ARTZ/templates/index.html
@@ -129,8 +129,8 @@
                            <h1 class="banner_taital">Revolutionalizing <br><span style="color: #151515;">HealthCare</span></h1>
                            <p class="banner_text">"Artz: The smartest choice for scheduling appointments"</p>
                            <div class="btn_main">
-                              <div class="more_bt"><a href="#">Book Now</a></div>
-                             <div class="contact_bt"><a href="#">View Medicals</a></div>
+                              <div class="more_bt"><a href="{% url 'booking' %}">Book Now</a></div>
+                             <div class="contact_bt"><a href="">View Medicals</a></div>
                           </div>
                         </div>
                         <div class="col-md-6">
