--- a/ARTZ/templates/staffDashboard.html
+++ b/ARTZ/templates/staffDashboard.html
@@ -44,9 +44,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                <ul class="navbar-nav mr-auto">
-               {% if user.is_authenticated|.is_patient %}
+               {% if user.is_authenticated  %}
                   <li class="nav-item">
-                     <a class="nav-link" href="{% url 'index' %}">Medicals</a>
+                     <a class="nav-link" href="">Medicals</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="{% url 'index' %}">Home</a>
@@ -127,7 +127,7 @@
                 <td class="text-center">{{item.user.last_name}}</td>
                 <td class="text-center">{{item.service}}</td>
                 <td class="text-center">{{item.day}}</td>
-                <td class="text-center">{{item.doctor.first_name}}</td>
+                <td class="text-center">Dr. {{item.doctor.first_name}} {{item.doctor.last_name}}-{{item.doctor.specialty}}</td>
                 </tr>
                 {% endfor %}
             </tbody>
