--- a/ARTZ/templates/view_medical_reports.html
+++ b/ARTZ/templates/view_medical_reports.html
@@ -1,24 +1,145 @@
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <!-- basic -->
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <!-- mobile metas -->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+      <!-- site metas -->
+      <title>Dashboard</title>
+      <meta name="keywords" content="">
+      <meta name="description" content="">
+      <meta name="author" content="">
+      <!-- bootstrap css -->
+      <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+      <!-- style css -->
+      <link rel="stylesheet" href="{% static 'css/style.css' %}">
+      <!-- Responsive-->
+      <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+      <!-- fevicon -->
+      <link rel="icon" href="{% static 'images/fevicon.png' %}" type="image/gif" />
+      <!-- Scrollbar Custom CSS -->
+      <link rel="stylesheet" href="{% static 'css/jquery.mCustomScrollbar.min.css' %}">
+      <!-- Tweaks for older IEs-->
+      <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/{% static 'css/font-awesome.css">
+      <!-- owl stylesheets --> 
+      <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+      <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+   </head>
+   <body>
+      <!-- header section start -->
+      <div class="header_section">
+         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="logo"><a href="index.html"><img src="{% static 'images/logo.png' %}"></a>
+               {% if user.is_authenticated %}
+               <nav><br> <h4>Welcome, {{user.username}}!</h4></nav>
+               {% endif %}
+            </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+               <ul class="navbar-nav mr-auto">
+               {% if user.is_authenticated  %}
+                  <li class="nav-item">
+                     <a class="nav-link" href="{% url 'index' %}">Medicals</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="{% url 'index' %}">Home</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="news.html">News</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="{% url 'booking' %}">Appointments</a>
+                  </li>
+                  <li class="nav-item active">
+                     <a class="nav-link" href="contact.html">Profile</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="#"><img src="{% static 'images/search-icon.png' %}"></a>
+                  </li>
+               </ul>
+               {% else %}
+                  <li class="nav-item">
+                     <a class="nav-link" href="{% url 'index' %}">Home</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="{% url 'login' %}">Login</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="news.html">News</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="{% url 'booking' %}">Bookings</a>
+                  </li>
+                  <li class="nav-item active">
+                     <a class="nav-link" href="contact.html">Contact Us</a>
+                  </li>
+                  <li class="nav-item">
+                {% endif %}
 
-    <h1>Medicalreports for {{ patient.first_name }} {{ patient.last_name }}</h1>
+            </div>
+         </nav>
+      </div>
+      <!-- header section end -->
+      <!-- contact section start -->
+      <div class="">
+        {% if messages %}
+        {% for message in messages %}
+            <h3>{{message}}</h3>
+        {% endfor %}
+        {% endif %}
+      </div>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Symptoms</th>
-                <th>Diagnosis</th>
-                <!-- <th>Prescription</th>
-                <th>Action</th> -->
-            </tr>
-        </thead>
-        <tbody>
-            {% for report in medical_reports %}
+    
+    <h3 class="banner_taital">Medical<span style="color: #151515;">Report</span></h3>
+    
+    {% if user.is_authenticated %}
+
+    <div class="shadow p-4 mb-5 bg-body bg-body rounded text-black  m-5 ">
+        <h1 class="text-center mt-5 mb-5"></h1>
+        <input class="form-control form-control-lg fs-3 border border-primary" id="myInput" type="text" placeholder="Search Report">
+        <br>
+    {% endif %}
+
+    <h1>Medicalreports  for  {{ patient.first_name }}  {{ patient.last_name }}</h1>
+
+    
+
+
+    <div class="table-responsive">
+        <table class="table table-bordered table-striped table-hover mx-auto">
+            <thead>
                 <tr>
-                    <td>{{report.date }}</td>                    
-                    <td>{{report.symptoms }}</td>
-                    <td>{{report.diagnosis }}</td>
-                   
+                <th class="text-center" scope="col">First Name</th>
+                <th class="text-center" scope="col">Last Name</th>
+                <th class="text-center" scope="col">Symptoms</th>
+                <th class="text-center" scope="col">Date</th>
+                <th class="text-center" scope="col">Diagnosis</th>
+
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody id="myTable">
+                {% for report in medical_reports %}
+                <tr>
+                <td class="text-center">{{report.patient.first_name}}</td>
+                <td class="text-center">{{report.patient.last_name}}</td>
+                <td class="text-center">{{report.symptoms}}</td>
+                <td class="text-center">{{report.date}}</td>
+                <td class="text-center">{{report.diagnosis}}</td>
+                </tr>
+                {% if editable %}
+                <td>
+                    <a href="{% url 'edit_medical_record' record.id %}">Edit</a>
+                    <a href="{% url 'delete_medical_record' record.id %}">Delete</a>
+                </td>
+                {% endif %}
+                {% endfor %}
+            </tbody>
+            </table>
+        </div>
