Feat: Split User Registration Save To Class  Doctor/Patient

--- a/ARTZ/templates/register.html
+++ b/ARTZ/templates/register.html
@@ -111,10 +111,10 @@
                            <div id="wrapper">
                               <label for="yes_no_radio"><h4>Are you a Patient or A Doctor ?</h4></label>
                               <p>
-                              <input type="radio" name="patient" id = "patient" value="patient">Patient </input>
+                              <input type="radio" name="user_type" id= "patient" value="patient">Patient </input>
                               </p>
                               <p>
-                              <input type="radio" name="patient" id="doctor" value="doctor">Doctor </input>
+                              <input type="radio" name="user_type" id= "doctor" value="doctor">Doctor </input>
                               </p>
                          </div>
                         <br/>
