Feat: Added Phone Number to Class Patient

--- a/ARTZ/templates/userDashboard.html
+++ b/ARTZ/templates/userDashboard.html
@@ -113,7 +113,8 @@
          <li class="list-group mt-2">First Name: {{ user.first_name }}</li>
          <li class="list-group mt-2">Last Name: {{ user.last_name }}</li>
          <li class="list-group mt-2">Username: {{ user.username }}</li>
-         <li class="list-group mt-2">Gender: {{ user.gender }}</li>
+         <li class="list-group mt-2">Phone Number: {{user.patient.phone_number }}</li>
+         <li class="list-group mt-2">Gender: {{user.patient.gender }}</li>
 
       </ul>
    </div>
