--- a/ARTZ/templates/userDashboard.html
+++ b/ARTZ/templates/userDashboard.html
@@ -113,8 +113,8 @@
          <li class="list-group mt-2">First Name: {{ user.first_name }}</li>
          <li class="list-group mt-2">Last Name: {{ user.last_name }}</li>
          <li class="list-group mt-2">Username: {{ user.username }}</li>
-         <li class="list-group mt-2">Phone Number: {{patient.phone_number }}</li>
-         <li class="list-group mt-2">Gender: {{patient.gender }}</li>
+         <!-- <li class="list-group mt-2">Phone Number: {{patient.phone_number }}</li>
+         <li class="list-group mt-2">Gender: {{patient.gender }}</li> -->
 
       </ul>
    </div>
